[gd_scene load_steps=3 format=3 uid="uid://c1njhcirugn8s"]

[ext_resource type="Script" uid="uid://c64i3xku0l27w" path="res://Scripts/Key.gd" id="1_3io8v"]
[ext_resource type="Texture2D" uid="uid://dfxx2ymq2yvcq" path="res://Assets/Sprites/GUI/Key_48x48.png" id="1_iipos"]

[node name="Key" type="Control"]
custom_minimum_size = Vector2(86, 86)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1834.0
offset_bottom = -994.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3io8v")

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
texture = ExtResource("1_iipos")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Character" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="Container" to="." method="_on_container_gui_input"]
[connection signal="mouse_entered" from="Container" to="." method="_on_container_mouse_entered"]
[connection signal="mouse_exited" from="Container" to="." method="_on_container_mouse_exited"]
